# ericsson-2017

./: README.md
round-1/: comms.txt  solve.py
round-1/protocol/: Response.capnp
round-1/responses/: response-01.msg  response-02.msg  response-03.msg  response-04.msg  response-05.msg  response-06.msg  response-08.msg  response-09.msg  response-10.msg  response-11.msg  response-12.msg  response-13.msg  response-14.msg
round-2/: .editorconfig  .gitignore  CMakeLists.txt  Client.cpp  Connection.cpp  Connection.h  Direction.cpp  Direction.h  Gui.cpp  Gui.h  Matrix.h  Model.cpp  Model.h  Player.h  Protocol.h  Server.cpp  Server.h  Utils.h  gui.cpp  gui.h  inf_zorro  main.cpp  run.sh  savegame5-friday.txt  server_main.cpp  xonix-local  xonix-remote
round-2/protocol/: Common.capnp  Common.capnp.c++  Common.capnp.h  Response.capnp
round-2/src/: AABB.cpp  AABB.h  Client.h  Connection.cpp  Connection.h  Direction.cpp  Direction.h  DumbPlayer.cpp  DumbPlayer.h  FinalPlayer.cpp  FinalPlayer.h  Fragment.cpp  Fragment.h  Gui.cpp  Gui.h  Matrix.h  Model.cpp  Model.h  Player.h  Pos.cpp  Pos.h  Protocol.h  Replayer.cpp  Replayer.h  Server.cpp  Server.h  Shapes.cpp  Shapes.h  Strategy.cpp  Strategy.h  Trap.cpp  Trap.h  Utils.cpp  Utils.h  ZorroPlayer.cpp  ZorroPlayer.h  ZorroStrategy.h  ZorroStrategyA.cpp  ZorroStrategyA.h  ZorroStrategyB.cpp  (+7 more)
round-2/src/protocol/: Command.capnp  Command.capnp.c++  Command.capnp.h  Response.capnp.c++  Response.capnp.h
